# RAscore

./: .gitignore  LICENSE  README.md  rascore_usage.ipynb  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
RAscore/: RAscore.py  RAscore_NN.py  RAscore_XGB.py  command_line_interface.py  download_public_data.py  test.smi
RAscore/images/: RA_Score_average_linkage_roc.tif  TOC.tif  average_linkage.tif
RAscore/model/: gdbscore_best_params.json  gdbscore_metrics.json  metrics.json
RAscore/model/models/DNN_gdbchembl_fcfp_counts/: best_params.json  metrics.json
RAscore/model/models/DNN_gdbmedchem_fcfp_counts/: best_params.json  metrics.json
RAscore/models/DNN_chembl_fcfp_counts/: best_params.json
RAscore/models/DNN_chembl_fcfp_counts/model.tf/: saved_model.pb
RAscore/models/DNN_chembl_fcfp_counts/model.tf/variables/: variables.index
data/: README.md
model_building/: README.md  builder.py  builder_dnn.py  descriptors.py  optimiser.py  optimiser_dnn.py
model_building/example_classification_configs/: AdaBoostClassifier.json  BaggingClassifier.json  LogisticRegression.json  ModifiedNaiveBayes.json  NN_classifier.json  RandomForestClassifier.json  RidgeClassifier.json  SVC.json  XGBClassifier.json
tests/: test_load.py
