[metadata]
name = RAscore
version = 2021.03
description = Retrosynthetic Accessibility (RA) score learned from computer aided synthesis planning
long_description = file: README.md
url = https://github.com/reymond-group/RAscore
download_url = https://github.com/reymond-group/RAscore
project_urls =
    Bug Tracker = https://github.com/reymond-group/RAscore/issues
    Source Code = https://github.com/reymond-group/RAscore
author = Reymond Group/Molecular AI AstraZeneca
author_email = amol.thakkar@dcb.unibe.ch
license = MIT
license_file = LICENSE
[options]
zip_safe = false
install_requires =
    rdkit
    tensorflow-gpu
    scikit-learn
    xgboost
    h5py
    click
extras_require = 
    retraining = 
    matplotlib
    ModifiedNB
    numpy
    optuna
    pandas
    scipy
    seaborn
    swifter
    tables
entry_points =
    console_scripts =
        RAscore = RAScore.command_line_interface.py:main
include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
    = RAScore
[options.packages.find]
where = RAScore